--- a/views/data.ejs
+++ b/views/data.ejs
@@ -10,7 +10,7 @@
     </title>
     <style type="text/css">
         html {
-            background: #ffffff url(/all/img/t2.jpg) no-repeat fixed center center;
+            background: #ffffff url(/all/img/brickwall.jpg) no-repeat fixed center center;
             background-size: cover;
         }
 
@@ -18,31 +18,44 @@
             height: 100%;
         }
 
-        .tit {
+        .term {
+            background: url(/all/img/T3.png) no-repeat fixed top center;
+            background-size: cover;
             position: absolute;
-            width: 40%;
-            top: 1%;
-            left: 5%;
+            width: 100%;
+            height: 100%;
+            top: 0px;
             z-index: 1000;
-            text-align: center;
-            font-family: 'Prompt', sans-serif;
-            color: white;
-            font-size: 14pt;
+            color: #00ff00;
+            display: flex;
+            justify-content: center;
         }
 
-        .ass {
-            font-family: '3270', sans-serif;
-            position: absolute;
-            width: 56%;
-            top: 14%;
-            height:36%;
-            left: 21%;
+        .box {
+            position:absolute;
+            top: 9vw;
+            width: 54%;
+            height: 30vw;
             z-index: 1000;
             text-align: left;
-            color: #00ff00;
-            font-size: 0.5rem;
-            font-size: clamp(0.5rem, 0.4285714285714286rem + 1.1428571428571428vw, 1rem);
+            color: rgb(8, 248, 128);
+            min-width: 240px;
         }
+
+
+        .tit {
+            position:absolute;
+            width:95%;
+            height:90%;
+            z-index: 1000;
+            text-align: left;
+            font-family: '3270', sans-serif;
+            color: #00ff00;
+            font-size: 0.5625rem;
+            font-size: clamp(0.5625rem, 0.39285714285714285rem + 1.1309523809523812vw, 1.75rem);
+   }
+
+
 
         .msg {
             font-family: '3270', sans-serif;
@@ -63,12 +76,12 @@
 </head>
 
 <body>
-    <div class="tit">
-                <%= title %>
+    <div class="term">
+        <div class="box">
+            <span class="tit"><%= data %></span>
     </div>
-    <div class="ass">
-                <%= data %>
     </div>
+<script src="https://cyberpunk.nyc/all/js/jquery-3.6.0.min.js"></script>
 </body>
 
 </html>
